WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294657
GoogleTest assertions should support CG/NSSize
https://bugs.webkit.org/show_bug.cgi?id=294657
Summary
GoogleTest assertions should support CG/NSSize
Aditya Keerthi
Reported
2025-06-17 22:57:44 PDT
Allow for use of EXPECT_EQ and others.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-17 22:57:52 PDT
<
rdar://problem/153708044
>
Aditya Keerthi
Comment 2
2025-06-17 23:05:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46887
EWS
Comment 3
2025-06-18 10:19:47 PDT
Committed
296385@main
(4b2d3c32fb1a): <
https://commits.webkit.org/296385@main
> Reviewed commits have been landed. Closing PR #46887 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug