GoogleTest assertions should support CG/NSSize https://bugs.webkit.org/show_bug.cgi?id=294657 rdar://153708044

Reviewed by Abrar Rahman Protyasha.

Add operator== and operator<< overloads for `CGSize` and `NSSize` in order
to allow for the use of these types with EXPECT_EQ() and other GoogleTest
assertions.

The benefits are reduced repetition, and more useful failure output which
prints out the values of both sizes.

* Tools/TestWebKitAPI/cocoa/TestCocoa.h:
* Tools/TestWebKitAPI/cocoa/TestCocoa.mm:
(ostreamRectCommon):
(ostreamSizeCommon):
(operator<<):
(operator==):

Canonical link: https://commits.webkit.org/296385@main