Tools/TestWebKitAPI/cocoa/TestCocoa.h
@@ -53,6 +53,8 @@ void instantiateUIApplicationIfNeeded(Class customApplicationClass = nil);
 
 std::ostream& operator<<(std::ostream&, const CGPoint&);
 bool operator==(const CGPoint&, const CGPoint&);
+std::ostream& operator<<(std::ostream&, const CGSize&);
+bool operator==(const CGSize&, const CGSize&);
 std::ostream& operator<<(std::ostream&, const CGRect&);
 bool operator==(const CGRect&, const CGRect&);
 
@@ -65,6 +67,8 @@ constexpr CGFloat blueColorComponents[4] = { 0, 0, 1, 1 };
 
 std::ostream& operator<<(std::ostream&, const NSPoint&);
 bool operator==(const NSPoint&, const NSPoint&);
+std::ostream& operator<<(std::ostream&, const NSSize&);
+bool operator==(const NSSize&, const NSSize&);
 std::ostream& operator<<(std::ostream&, const NSRect&);
 bool operator==(const NSRect&, const NSRect&);
 
