Tools/TestWebKitAPI/cocoa/TestCocoa.mm
@@ -33,13 +33,19 @@
 template<typename T>
 static inline std::ostream& ostreamRectCommon(std::ostream& os, const T& rect)
 {
-    return os << "(origin = " << rect.origin << ", size = (width = " << rect.size.width << ", height = " << rect.size.height << "))";
+    return os << "(origin = " << rect.origin << ", size = " << rect.size << ")";
 }
 
 template<typename T>
 static inline std::ostream& ostreamPointCommon(std::ostream& os, const T& point)
 {
     return os << "(x = " << point.x << ", y = " << point.y << ")";
+}
+
+template<typename T>
+static inline std::ostream& ostreamSizeCommon(std::ostream& os, const T& size)
+{
+    return os << "(width = " << size.width << ", height = " << size.height << ")";
 }
 
 #if USE(CG)
@@ -52,6 +58,16 @@ std::ostream& operator<<(std::ostream& os, const CGPoint& point)
 bool operator==(const CGPoint& a, const CGPoint& b)
 {
     return CGPointEqualToPoint(a, b);
+}
+
+std::ostream& operator<<(std::ostream& os, const CGSize& size)
+{
+    return ostreamSizeCommon(os, size);
+}
+
+bool operator==(const CGSize& a, const CGSize& b)
+{
+    return CGSizeEqualToSize(a, b);
 }
 
 std::ostream& operator<<(std::ostream& os, const CGRect& rect)
@@ -76,6 +92,16 @@ std::ostream& operator<<(std::ostream& os, const NSPoint& point)
 bool operator==(const NSPoint& a, const NSPoint& b)
 {
     return NSEqualPoints(a, b);
+}
+
+std::ostream& operator<<(std::ostream& os, const NSSize& size)
+{
+    return ostreamSizeCommon(os, size);
+}
+
+bool operator==(const NSSize& a, const NSSize& b)
+{
+    return NSEqualSizes(a, b);
 }
 
 std::ostream& operator<<(std::ostream& os, const NSRect& rect)
